[tool.poetry]
name = "cw-3-chirov"
version = "0.1.0"
description = ""
authors = ["Dmitri_Chirov <dim.ch.it80@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_3_chirov"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
